--- a/sshfp.1
+++ b/sshfp.1
@@ -1,79 +1,159 @@
-NAME
-        sshfp - convert SSH's public keys to DNS (rfc4255) SSHFP records.
-
-SYNOPSIS
-	sshfp [-at] [-f [knownhosts_file]] | -d domain_name ] [ hostname1 hostname2 ... ] [@ns]
-
-DESCRIPTION
-
-sshfp generates RFC4255 SSHFP DNS records based on the public keys stores in a
-known_hosts file or obtained from DNS. If the domain allows for AXFR transfers, an
-entire domain can be processed for A records to convert.
-
-OPTIONS
-
-	-f,  --file <known_hosts file> 
-		Get public keys from file
-		Location of known_hosts file (default: ~/.ssh/known_hosts)
-	-d,  --dns <domain | host>
-		Get public keys from DNS
-		Domain name to query records from
-
-	-a,  --all
-		Convert all known_hosts entries to SSHFP records, or
-		Convert all A records of the domain using AXFR
-
-	-t,  --trailing-dot
-		Add a trailing dot to the hostname in the SSHFP records
-
-	-h,  --help
-		This message
-
-	-v,  --version
-		Display version number
-
-	-o, --output
-		Write output to file instead of stdout
-
-EXAMPLES
+.Dd September 21, 2006
+.Dt SSHFP 1
+.Os
+.Sh NAME
+.Nm sshfp
+.Nd convert SSH's public keys to DNS (rfc4255) SSHFP records
+.Sh SYNOPSIS
+.Nm sshfp
+.Bk -words
+.Fl k
+.Oo Ar known_hosts-file 
+.Fl a | host1 Oo host2 
+.Fl t
+.Ek
+.Nm sshfp
+.Fl s 
+.Op Fl a Ar domainname
+.Oo Ar host1 Oc Ns Ar .Oo Ar host2 Oc Ns Ar
+.FL t
+.Fl @ns
+.Sh DESCRIPTION
+.Nm
+generates RFC4255 SSHFP DNS records based on the public keys stored in a
+known_hosts file, which implies the user has previously trusted this key,
+or can be obtained by using 
+.Xr ssh-keyscan 1
+. Using 
+.Xr ssh-keyscan 1
+implies a secure path to connect to the hosts being scanned. It also implies
+a trust in the DNS to obtain the IP address of the hostname to be scanned.
+.Pp
+If the domain allows for
+.Ar AXFR
+transfers, an entire domain can be processed for 
+.Ar A
+records to convert.
+.Pp
+The options are as follows:
+.Bl -tag -width Ds
+.It Fl k
+.Oo Ar knownhosts_file
+.It Fl knownhosts
+.Oo Ar knownhosts_file
+Obtain the host public
+.Cm SSH
+keys from a 
+.Pa known_hosts. If no argument is given, it defaults to
+.Pa ~/.ssh/known_hosts
+.It Fl s, scan Ar hostname | domainname
+Obtain the host public
+.Cm SSH
+keys via
+.Xr ssh-keyscan 1
+If
+.Fl a
+is used, the argument implies a domain name for use of
+.Cm AXFR
+The hostnames or domain records are found using normal DNS procedures, which
+is vulnerable to
+.Cm Man in the middle
+attacks. Theoretically, the
+.Xr ssh-keyscan 1.
+connection can also be
+.Cmhijacked
+.It Fl a
+.Oo Ar @ns
+.It Fl all
+.Oo Ar @ns
+When used with
+.Fl k .
+.Oo Ar knownhosts_file
+generate SSHFP records for all entries in the known_hosts file. If no argument is given, it defaults to
+.Pa ~/.ssh/known_hosts
+If used in combination with
+.Fl s .
+perform an
+.Cm AXFR
+transfer to obtain the entire zone file, and generate SSHFP records for all
+the
+.Cm A
+records found in the zone. The client needs to be authorized to do an
+.Cm AXFR
+transfer.
+.It Fl t
+.It Fl trailing-dot
+Add a trailing dot to the hostname in the SSHFP records.  It is not possible
+to determine whether a known_hosts or dns query is for a FQDN (eg www.xelerance.com)
+or not (eg www) or not (unless 
+.Fl -d domainname -a
+ is used, in which case a trailing dot is always appended). Non-FQDN get their
+domainname appended through
+.Pa /etc/resolv.conf
+These non-FQDN will happen when using a non-FQDN, eg
+.Ic sshfp -k www
+or known_hosts entries obtained by running
+.Ic ssh www.sub
+where 
+.Ic .domain.com
+is implied. When
+.Fl t .
+is used, all hostnames not ending with a dot, that at least contain two parts in their
+hostname (eg
+.Ic www.sub
+but not
+.Ic www
+) get a trailing dot. Note that the output of
+.Nm
+can also just be manually editted for trailing dots.
+.It Fl h
+.It Fl help
+This help message
+.It Fl v
+.It Fl version
+Display the version number and exit
+.It Fl o Ar filename
+.It Fl output Ar filename
+Log all messages to 
+.Pa filename
+.Sx EXAMPLES
+.nNm
 		sshfp -a -t
 		sshfp -f /tmp/known_hosts bofh.xelerance.com www.openswan.org
 		sshfp -a -t -d xelerance.com @ns0.xelerance.net
 
 ISSUES
 
-  FQDN
-  When using non-FQDN names (eg 'www' instead of 'www.xelerance.com'), either
+  Using non-FQDN names (eg 'www' instead of 'www.xelerance.com'), either
   with ssh or sshfp can result in confusion or inconsistent records if the
   resolving behaviour changes, such as by modifying /etc/resolv.conf. 
 
 
   Trailing dot
-  It is not possible to determine whether a known_hosts or dns query is a
-  FQDN or not (unless -d domainname -a is used, in which case a trailing
-  dot is always appended). However, one can edit the output and either append
-  the domainname or a dot if needed.
 
   Obtained SSHFP records can be hand-edited to append the domain suffix if necessary.
 
-SEE ALSO
-	ssh(1), ssh-keyscan(1), rfc4255
-
-TODO
-	Write a verify mode where we check:
-	- If the SSHFP record matches the actual host key
-	- If the SSHFP record matches the known_hosts entry
-	- if the known_hosts entry matches the actual host key
-
-HISTORY
-	sshfp was originally written by Xelerance to harvest, generate and populate
-	SSHFP records in their DNSSEC secured zonefiles.
-
-AUTHORS
-	Paul Wouters <paul@xelerance.com>
-
-COPYRIGHT
-       Copyright © 2006 Xelerance Corporation
+.Sh SEE ALSO
+.Xr ssh-keyscan 1 ,
+.Xr ssh 1 ,
+.Rs
+.%T RFC 4255
+.Sh TODO
+Write a verify mode where we check:
+.Pp
+If the SSHFP record matches the actual host key
+.Pp
+If the SSHFP record matches the known_hosts entry
+.Pp
+If the known_hosts entry matches the actual host key
+.Sh HISTORY
+sshfp was originally written by Xelerance to harvest, generate and populate
+.CmSSHFP
+records in their DNSSEC secured zonefiles.
+.Sh AUTHORS
+.%A Paul Wouters <paul@xelerance.com>
+.Sh COPYRIGHT
+Copyright © 2006 Xelerance Corporation
 
 This program is free software; you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the
@@ -84,4 +164,3 @@ This program is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
 Public License (file COPYING in the distribution) for more details.
-
