--- a/CHANGES
+++ b/CHANGES
@@ -1,23 +1,25 @@
 
 v1.0.5
-- fixed Debian package pointer to be python-dnspython
-- fixed trailing dot for ORIGIN entry when AXFR is used
-- changed -d/--dns and -f/--knownhosts to -s/--scan and -k/--knownhosts [hugh daniel]
-- add timestamp in named.conf comment syntax to axfr unless -q/--quiet is used. [paul]
-- exclude localhost from AXFR since it leaks information about the host that ran sshfp [paul]
-- moved files into git repository. anonymous git access at http://git.xelerance.com/
+- Fixed Debian package pointer to be python-dnspython
+- Fixed trailing dot for ORIGIN entry when AXFR is used
+- Changed -d/--dns and -f/--knownhosts to -s/--scan and -k/--knownhosts [hugh daniel]
+- Add timestamp in named.conf comment syntax to axfr unless -q/--quiet is used. [paul]
+- Exclude localhost from AXFR since it leaks information about the host that ran sshfp [paul]
+- Moved files into git repository. anonymous git access at http://git.xelerance.com/
+- Fix "sshfp -k hostname" where hostname is not a domainname's A record.
+- Added man page
 
 v1.0.4
-- fixed option parsing [paul]
-- hardened dns failures [patrick naubert]
+- Fixed option parsing [paul]
+- Hardened dns failures [patrick naubert]
 
 v1.0.3
-- public release of sshfp
-- added fedora spec file for packaging
+- Public release of sshfp
+- Added fedora spec file for packaging
 
 v1.0.1
-- renamed knownhosts2sshfp to sshfp since it no longer reflects the function [paul]
-- added ssh-keyscan option on suggestion of Jake Appelbaum [paul]
+- Renamed knownhosts2sshfp to sshfp since it no longer reflects the function [paul]
+- Added ssh-keyscan option on suggestion of Jake Appelbaum [paul]
 
 v1.0.0
-- internal initial release
+- Internal initial release
