--- a/sshfp.1
+++ b/sshfp.1
@@ -1,158 +1,82 @@
-.Dd September 21, 2006
-.Dt SSHFP 1
-.Os
-.Sh NAME
-.Nm sshfp
-.Nd convert SSH's public keys to DNS (rfc4255) SSHFP records
-.Sh SYNOPSIS
-.Nm sshfp
-.Bk -words
-.Fl k
-.Oo Ar known_hosts-file 
-.Fl a | host1 Oo host2 
-.Fl t
-.Ek
-.Nm sshfp
-.Fl s 
-.Op Fl a Ar domainname
-.Oo Ar host1 Oc Ns Ar .Oo Ar host2 Oc Ns Ar
-.FL t
-.Fl @ns
-.Sh DESCRIPTION
-.Nm
-generates RFC4255 SSHFP DNS records based on the public keys stored in a
-known_hosts file, which implies the user has previously trusted this key,
-or can be obtained by using 
-.Xr ssh-keyscan 1
-. Using 
-.Xr ssh-keyscan 1
-implies a secure path to connect to the hosts being scanned. It also implies
-a trust in the DNS to obtain the IP address of the hostname to be scanned.
-.Pp
-If the domain allows for
-.Ar AXFR
-transfers, an entire domain can be processed for 
-.Ar A
-records to convert.
-.Pp
-The options are as follows:
-.Bl -tag -width Ds
-.It Fl k
-.Oo Ar knownhosts_file
-.It Fl knownhosts
-.Oo Ar knownhosts_file
-Obtain the host public
-.Cm SSH
-keys from a 
-.Pa known_hosts. If no argument is given, it defaults to
-.Pa ~/.ssh/known_hosts
-.It Fl s, scan Ar hostname | domainname
-Obtain the host public
-.Cm SSH
-keys via
-.Xr ssh-keyscan 1
-If
-.Fl a
-is used, the argument implies a domain name for use of
-.Cm AXFR
-The hostnames or domain records are found using normal DNS procedures, which
-is vulnerable to
-.Cm Man in the middle
-attacks. Theoretically, the
-.Xr ssh-keyscan 1.
-connection can also be
-.Cmhijacked
-.It Fl a
-.Oo Ar @ns
-.It Fl all
-.Oo Ar @ns
-When used with
-.Fl k .
-.Oo Ar knownhosts_file
-generate SSHFP records for all entries in the known_hosts file. If no argument is given, it defaults to
-.Pa ~/.ssh/known_hosts
-If used in combination with
-.Fl s .
-perform an
-.Cm AXFR
-transfer to obtain the entire zone file, and generate SSHFP records for all
-the
-.Cm A
-records found in the zone. The client needs to be authorized to do an
-.Cm AXFR
-transfer.
-.It Fl t
-.It Fl trailing-dot
+.TH "sshfp" "1" "1.0.5" "Paul Wouters" "Internet / DNS"
+.SH "sshfp"
+.LP 
+convert SSH public keys to RFC\-4255 SSHFP records
+.SH "SYNTAX"
+.LP 
+sshfp [\fI\-k\fP [ \fIknownhosts_file\fP ]] [\fI\-a\fP] | [ <\fIhostname1\fP> [\fIhostname2 ...]\fP]
+.br 
+sshfp \fI\-s\fP [ \fI\-a\fP <\fIdomain\fP> ] | [<\fIhostname1\fP> [\fIhostname2 ...]\fP] [\fI@ns\fP]
+.SH "DESCRIPTION"
+.LP 
+sshfp generates RFC4255 SSHFP DNS records based on the public keys
+stored in a known_hosts file, which implies the user has
+previously trusted this key, or public keys can be obtained
+by using ssh\-keyscan (1). Using ssh\-keyscan (1) implies a secure path to connect to the hosts being scanned.
+It also implies a trust in the DNS to obtain the IP address of
+the hostname to be scanned. If the nameserver of the domain allows zone tranfers (AXFR), an entire domain can be processed for all its A records.
+.SH "OPTIONS"
+.LP 
+.TP 
+\fB\-s / \-\-scan\fR <\fIhostname1\fP> [hostname2 ...]
+Scan hosts or domain for public SSH keys using ssh\-keyscan 
+.TP 
+\fB\-k / \-\-knownhosts \fI[knownhosts_file\fP] <\fIhostname1\fP> [hostname2 ...]
+Obtain public SSH keys from a known_hosts file. Defaults to using ~/.ssh/known_hosts
+.TP 
+\fB\-a / \-\-all\fR
+Scan all hosts in the known_hosts file when used with \-k. When used with \-s, it will attempt an zone transfer (AXFR) to obtain all A records in the domain specified.
+.TP 
+\fB\-t / \-\-trailing\-dot\fR
 Add a trailing dot to the hostname in the SSHFP records.  It is not possible
 to determine whether a known_hosts or dns query is for a FQDN (eg www.xelerance.com)
-or not (eg www) or not (unless 
-.Fl -d domainname -a
- is used, in which case a trailing dot is always appended). Non-FQDN get their
-domainname appended through
-.Pa /etc/resolv.conf
-These non-FQDN will happen when using a non-FQDN, eg
-.Ic sshfp -k www
-or known_hosts entries obtained by running
-.Ic ssh www.sub
-where 
-.Ic .domain.com
-is implied. When
-.Fl t .
-is used, all hostnames not ending with a dot, that at least contain two parts in their
-hostname (eg
-.Ic www.sub
-but not
-.Ic www
-) get a trailing dot. Note that the output of
-.Nm
-can also just be manually editted for trailing dots.
-.It Fl h
-.It Fl help
-This help message
-.It Fl v
-.It Fl version
-Display the version number and exit
-.It Fl o Ar filename
-.It Fl output Ar filename
-Log all messages to 
-.Pa filename
-.Sx EXAMPLES
-.nNm
-		sshfp -a -t
-		sshfp -f /tmp/known_hosts bofh.xelerance.com www.openswan.org
-		sshfp -a -t -d xelerance.com @ns0.xelerance.net
-
-ISSUES
-
-  Using non-FQDN names (eg 'www' instead of 'www.xelerance.com'), either
-  with ssh or sshfp can result in confusion or inconsistent records if the
-  resolving behaviour changes, such as by modifying /etc/resolv.conf. 
-
-
-  Trailing dot
-
-  Obtained SSHFP records can be hand-edited to append the domain suffix if necessary.
-
-.Sh SEE ALSO
-.Xr ssh-keyscan 1 ,
-.Xr ssh 1 ,
-.Rs
-.%T RFC 4255
-.Sh TODO
-Write a verify mode where we check:
-.Pp
-If the SSHFP record matches the actual host key
-.Pp
-If the SSHFP record matches the known_hosts entry
-.Pp
-If the known_hosts entry matches the actual host key
-.Sh HISTORY
-sshfp was originally written by Xelerance to harvest, generate and populate
-.CmSSHFP
-records in their DNSSEC secured zonefiles.
-.Sh AUTHORS
-.%A Paul Wouters <paul@xelerance.com>
-.Sh COPYRIGHT
+or not (eg www) or not (unless \-d domainname \-a is used, in which case a trailing dot
+is always appended). Non\-FQDN get their domainname appended through /etc/resolv.conf
+These non\-FQDN will happen when using a non\-FQDN (eg sshfp \-k www)
+or known_hosts entries obtained by running ssh www.sub where .domain.com is implied.
+When \-t is used, all hostnames not ending with a dot, that at least contain two parts
+in their hostname (eg www.sub but not www get a trailing dot. Note that the output of
+sshfp can also just be manually editted for trailing dots.
+.TP 
+\fB\-o / \-\-output\fR <\fIfilename\fP>
+Write to filename instead of stdout
+.TP 
+\fB\-h / \-\-help\fR
+Output help information and exit.
+.TP 
+\fB\-v / \-\-version\fR
+Output version information and exit.
+.SH "FILES"
+.LP 
+\fI~/.ssh/known_hosts\fP 
+.SH "REQUIREMENTS"
+.LP 
+sshfp requires python-dns (http://www.pythondns.org)
+.LP
+Fedora: yum install python-dns
+.LP
+Debian: apt-get install python-dnspython
+.SH "BUGS"
+.LP 
+if a domain contains non\-working glue A records, then ssh\-keyscan aborts instead of skipping the single broken entry.
+.SH "EXAMPLES"
+typical usage:
+.LP 
+sshfp (implies \-k \-a)
+.LP 
+sshfp \-a \-t (implies \-k)
+.LP 
+sshfp \-k ~paul/.ssh/known_hosts bofh.xelerance.com www.openswan.org \-o /tmp/mysshfp.txt
+.LP 
+sshfp \-a \-t \-d xelerance.com @ns0.xelerance.net
+.SH "SEE ALSO"
+.LP 
+ssh\-keyscan(1) ssh(1) and RFC\-4255
+.LP
+ftp://ftp.xelerance.com/sshfp/
+.SH "AUTHORS"
+.LP 
+.SH "COPYRIGHT"
 Copyright © 2006 Xelerance Corporation
 
 This program is free software; you can redistribute it and/or modify it
