--- a/README
+++ b/README
@@ -1,105 +1,105 @@
-sshfp(1)                        Internet / DNS                        sshfp(1)
+
+sshfp
+
+   convert SSH public keys to RFC-4255 SSHFP records
+
+SYNTAX
+
+   sshfp [-k [ knownhosts_file ]] [-a] | [ <hostname1> [hostname2 ...]]
+   sshfp -s [ -a <domain> ] | [<hostname1> [hostname2 ...]] [@ns]
+
+DESCRIPTION
+
+   sshfp generates RFC4255 SSHFP DNS records based on the public keys stored in
+   a known_hosts file, which implies the user has previously trusted this key,
+   or public keys can be obtained by using ssh-keyscan (1). Using ssh-keyscan
+   (1) implies a secure path to connect to the hosts being scanned. It also
+   implies a trust in the DNS to obtain the IP address of the hostname to be
+   scanned. If the nameserver of the domain allows zone tranfers (AXFR), an
+   entire domain can be processed for all its A records.
+
+OPTIONS
+
+   -s / --scan <hostname1> [hostname2 ...]
+          Scan hosts or domain for public SSH keys using ssh-keyscan
+   -k / --knownhosts [knownhosts_file] <hostname1> [hostname2 ...]
+          Obtain public SSH keys from a known_hosts file. Defaults to using
+          ~/.ssh/known_hosts
+   -a / --all
+          Scan all hosts in the known_hosts file when used with -k. When used
+          with -s, it will attempt an zone transfer (AXFR) to obtain all A
+          records in the domain specified.
+   -t / --trailing-dot
+          Add a trailing dot to the hostname in the SSHFP records. It is not
+          possible to determine whether a known_hosts or dns query is for a
+          FQDN (eg [3]www.xelerance.com) or not (eg www) or not (unless -d
+          domainname  -a  is used, in which case a trailing dot is always
+          appended).  Non-FQDN  get  their  domainname  appended  through
+          /etc/resolv.conf These non-FQDN will happen when using a non-FQDN (eg
+          sshfp  -k  www)  or known_hosts entries obtained by running ssh
+          [4]www.sub  where  .domain.com is implied. When -t is used, all
+          hostnames not ending with a dot, that at least contain two parts in
+          their hostname (eg [5]www.sub but not www get a trailing dot. Note
+          that  the output of sshfp can also just be manually editted for
+          trailing dots.
+   -o / --output <filename>
+          Write to filename instead of stdout
+   -h / --help
+          Output help information and exit.
+   -v / --version
+          Output version information and exit.
 
 
 
-sssshhffpp
-       convert SSH public keys to RFC-4255 SSHFP records
+FILES
 
-SSYYNNTTAAXX
-       sshfp [_-_k [ _k_n_o_w_n_h_o_s_t_s___f_i_l_e ]] [_-_a] | [ <_h_o_s_t_n_a_m_e_1> [_h_o_s_t_n_a_m_e_2 _._._._]]
-       sshfp _-_s [ _-_a <_d_o_m_a_i_n> ] | [<_h_o_s_t_n_a_m_e_1> [_h_o_s_t_n_a_m_e_2 _._._._]] [_@_n_s]
+   ~/.ssh/known_hosts
 
-DDEESSCCRRIIPPTTIIOONN
-       sshfp  generates  RFC4255  SSHFP  DNS  records based on the public keys
-       stored in a known_hosts file, which implies  the  user  has  previously
-       trusted  this  key, or public keys can be obtained by using ssh-keyscan
-       (1). Using ssh-keyscan (1) implies a secure  path  to  connect  to  the
-       hosts  being scanned.  It also implies a trust in the DNS to obtain the
-       IP address of the hostname to be scanned.  If  the  nameserver  of  the
-       domain  allows  zone tranfers (AXFR), an entire domain can be processed
-       for all its A records.
+REQUIREMENTS
 
-OOPPTTIIOONNSS
-       --ss // ----ssccaann <_h_o_s_t_n_a_m_e_1> [hostname2 ...]
-              Scan hosts or domain for public SSH keys using ssh-keyscan
+   sshfp requires python-dns ([6]http://www.pythondns.org)
 
-       --kk // ----kknnoowwnnhhoossttss _[_k_n_o_w_n_h_o_s_t_s___f_i_l_e]] <<_h_o_s_t_n_a_m_e_1>> [[hhoossttnnaammee22 ......]]
-              Obtain public SSH keys from  a  known_hosts  file.  Defaults  to
-              using ~/.ssh/known_hosts
+   Fedora: yum install python-dns
 
-       --aa // ----aallll
-              Scan  all  hosts in the known_hosts file when used with -k. When
-              used with -s, it will attempt an zone transfer (AXFR) to  obtain
-              all A records in the domain specified.
+   Debian: apt-get install python-dnspython
 
-       --tt // ----ttrraaiilliinngg--ddoott
-              Add  a trailing dot to the hostname in the SSHFP records.  It is
-              not possible to determine whether a known_hosts or dns query  is
-              for a FQDN (eg www.xelerance.com) or not (eg www) or not (unless
-              -d domainname -a is used, in which case a trailing dot is always
-              appended).   Non-FQDN  get  their  domainname  appended  through
-              /etc/resolv.conf  These  non-FQDN  will  happen  when  using   a
-              non-FQDN  (eg  sshfp  -k www) or known_hosts entries obtained by
-              running ssh www.sub where .domain.com is implied.   When  -t  is
-              used, all hostnames not ending with a dot, that at least contain
-              two parts in their hostname (eg www.sub but not www get a trail-
-              ing dot. Note that the output of sshfp can also just be manually
-              editted for trailing dots.
+BUGS
 
-       --oo // ----oouuttppuutt <_f_i_l_e_n_a_m_e>
-              Write to filename instead of stdout
+   if a domain contains non-working glue A records, then ssh-keyscan aborts
+   instead of skipping the single broken entry.
 
-       --hh // ----hheellpp
-              Output help information and exit.
+EXAMPLES
 
-       --vv // ----vveerrssiioonn
-              Output version information and exit.
+   typical usage:
 
-FFIILLEESS
-       _~_/_._s_s_h_/_k_n_o_w_n___h_o_s_t_s
+   sshfp (implies -k -a)
 
-RREEQQUUIIRREEMMEENNTTSS
-       sshfp requires python-dns (http://www.pythondns.org)
+   sshfp -a -t (implies -k)
 
-       Fedora: yum install python-dns
+   sshfp -k ~paul/.ssh/known_hosts bofh.xelerance.com [7]www.openswan.org -o
+   /tmp/mysshfp.txt
 
-       Debian: apt-get install python-dnspython
+   sshfp -a -t -d xelerance.com @ns0.xelerance.net
 
-BBUUGGSS
-       if a domain contains  non-working  glue  A  records,  then  ssh-keyscan
-       aborts instead of skipping the single broken entry.
+SEE ALSO
 
-EEXXAAMMPPLLEESS
-       typical usage:
+   [8]ssh-keyscan(1) [9]ssh(1) and RFC-4255
 
-       sshfp (implies -k -a)
+   [10]ftp://ftp.xelerance.com/sshfp/
 
-       sshfp -a -t (implies -k)
-
-       sshfp  -k ~paul/.ssh/known_hosts bofh.xelerance.com www.openswan.org -o
-       /tmp/mysshfp.txt
-
-       sshfp -a -t -d xelerance.com @ns0.xelerance.net
-
-SSEEEE AALLSSOO
-       ssh-keyscan(1) ssh(1) and RFC-4255
-
-       ftp://ftp.xelerance.com/sshfp/
-
-AAUUTTHHOORRSS
-CCOOPPYYRRIIGGHHTT
-       Copyright © 2006 Xelerance Corporation
-
-       This program is free software; you can redistribute it and/or modify it
-       under  the  terms of the GNU General Public License as published by the
-       Free Software Foundation; either version 2 of the License, or (at  your
-       option)  any later version.  See <http://www.fsf.org/copyleft/gpl.txt>.
-
-       This program is distributed in the hope that it  will  be  useful,  but
-       WITHOUT  ANY  WARRANTY;  without  even  the  implied  warranty  of MER-
-       CHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU  General
-       Public License (file COPYING in the distribution) for more details.
+AUTHORS
 
 
+COPYRIGHT
 
-Paul Wouters                         1.0.5                            sshfp(1)
+   Copyright (C) 2006 Xelerance Corporation
+
+   This program is free software; you can redistribute it and/or modify it
+   under the terms of the GNU General Public License as published by the Free
+   Software Foundation; either version 2 of the License, or (at your option)
+   any later version. See <[11]http://www.fsf.org/copyleft/gpl.txt>.
+
+   This program is distributed in the hope that it will be useful, but WITHOUT
+   ANY  WARRANTY; without even the implied warranty of MERCHANTABILITY or
+   FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License (file
+   COPYING in the distribution) for more details.
