Fixed manpage which got my name mangled out of it.

--- a/sshfp.1
+++ b/sshfp.1
@@ -81,8 +81,10 @@ ssh\-keyscan(1) ssh(1) and RFC\-4255
 .LP
 ftp://ftp.xelerance.com/sshfp/
 .SH "AUTHORS"
-.LP 
+.LP
+Paul Wouters
 .SH "COPYRIGHT"
+.LP
 Copyright © 2006 Xelerance Corporation
 
 This program is free software; you can redistribute it and/or modify it
