Better one-liner description.

--- a/sshfp.1
+++ b/sshfp.1
@@ -1,7 +1,7 @@
 .TH "sshfp" "1" "1.0.6" "Paul Wouters" "Internet / DNS"
 .SH "sshfp"
 .LP 
-convert SSH public keys to RFC\-4255 SSHFP records
+Generate SSHFP DNS records from knownhosts files or ssh-keyscan
 .SH "SYNTAX"
 .LP 
 sshfp [\fI\-k\fP [ \fIknownhosts_file\fP ]] [\fI\-a\fP] | [ <\fIhostname1\fP> [\fIhostname2 ...]\fP]
