--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 
 sshfp
 
-   convert SSH public keys to RFC-4255 SSHFP records
+   Generate SSHFP DNS records from knownhosts files or ssh-keyscan
 
 SYNTAX
 
