--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+v1.1.0
+- All SSHFP records were created badly using a sha1() on the uuencoded
+  keyblow instead of the raw uudecoded keyblob.
+- Fixed getrecord -> getRecord call when using -a (AXFR)
+- Added a newline when -o is used, to make dnssigner happy
+
 v1.0.6
 - Added man page
 
