Fixed author layout. Added Jake to man page.

--- a/sshfp.1
+++ b/sshfp.1
@@ -83,6 +83,7 @@ ftp://ftp.xelerance.com/sshfp/
 .SH "AUTHORS"
 .LP
 Paul Wouters
+Jake Appebaum
 .SH "COPYRIGHT"
 .LP
 Copyright © 2006 Xelerance Corporation
