--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+v1.1.2
+- Added -p port option - Patch by andrew@lewman.com
+- Fixed getopt order
+
 v1.1.1
 - Ignore hashed hostname entries in known_hosts files
 - Fix "sshfp -k -a"
