--- a/sshfp.1
+++ b/sshfp.1
@@ -87,7 +87,7 @@ http://www.xelerance.com/software/sshfp/
 http://lists.xelerance.com/mailman/listinfo/sshfp/
 .SH "AUTHORS"
 .LP
-Paul Wouters <paul@xelerance.com>, Jake Appebaum <jacob@appelbaum.net>
+Paul Wouters <paul@xelerance.com>, Jacob Appelbaum <jacob@appelbaum.net>
 .SH "COPYRIGHT"
 .LP
 Copyright © 2006 Xelerance Corporation
