--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+sshfp (1.1.3-1) unstable; urgency=low
+
+  * Moved trailing-dot option from -t to -d
+  * Added -t / --type <rsa|dsa>
+  * Added -T / --timeout <secs>
+  * Fixed printing of bogus blanc line at the end.
+
 sshfp (1.1.2) unstable; urgency=low
 
   * Initial Release.
