--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+v1.1.4
+- Fixes to man page [Maximiliano Curia]
+- Fixes to Makefile for Debian [Maximiliano Curia]
+
 v1.1.3
 - Moved trailing-dot option from -t to -d
 - Added -t / --type <rsa|dsa>
