Increment version number. Remove a erronous ">". Update copyright years.

--- a/sshfp.1
+++ b/sshfp.1
@@ -1,4 +1,4 @@
-.TH "sshfp" "1" "1.1.3" "Paul Wouters" "Internet / DNS"
+.TH "sshfp" "1" "1.1.5" "Paul Wouters" "Internet / DNS"
 .SH "NAME"
 .LP 
 sshfp \- Generate SSHFP DNS records from knownhosts files or ssh-keyscan
@@ -9,7 +9,7 @@ sshfp \- Generate SSHFP DNS records from knownhosts files or ssh-keyscan
 .\"Comment:        print "       sshfp -s [-d] [ [-p port] [-a domainname] [-o output] | host1 [host2 .. ] ] [@ns]"
 sshfp [\fI\-k\fP [\fIknownhosts_file\fP]] [\fI\-d\fP] [\fI\-a\fP] | [<\fIhost1\fP> [\fIhost2 ...]\fP]
 .br 
-sshfp \fI\-s\fP [\fI\-p\fP <\fIport\fP>] [\fI\-d\fP] <\fI\-a\fP <\fIdomain\fP> [\fI@ns\fP] | <\fIhost1\fP> [\fIhost2 ...\fP] >
+sshfp \fI\-s\fP [\fI\-p\fP <\fIport\fP>] [\fI\-d\fP] <\fI\-a\fP <\fIdomain\fP> [\fI@ns\fP] | <\fIhost1\fP> [\fIhost2 ...\fP]
 .SH "DESCRIPTION"
 .LP 
 sshfp generates RFC4255 SSHFP DNS records based on the public keys
@@ -93,7 +93,7 @@ http://lists.xelerance.com/mailman/listinfo/sshfp/
 Paul Wouters <paul@xelerance.com>, Jacob Appelbaum <jacob@appelbaum.net>
 .SH "COPYRIGHT"
 .LP
-Copyright © 2006 Xelerance Corporation
+Copyright © 2006-2010 Xelerance Corporation
 
 This program is free software; you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the
