--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,8 @@
 v1.1.5
 - Fixes for https://bugs.launchpad.net/ubuntu/+source/sshfp/+bug/355886
-  Fix for sha Deprecation warning [Martin Jackson]
-  Fix for use of os.popen3 [Martin Jackson]
+- Fix for sha Deprecation warning [Martin Jackson]
+- Fix for use of os.popen3 [Martin Jackson]
+- Sync debian/ with Debian (thanks)
 
 v1.1.4
 - Fixes to man page [Maximiliano Curia]
