--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@ v1.1.5
 - Fix for sha Deprecation warning [Martin Jackson]
 - Fix for use of os.popen3 [Martin Jackson]
 - Sync debian/ with Debian (thanks)
+- Various small pylint fixes [Simon Deziel]
 
 v1.1.4
 - Fixes to man page [Maximiliano Curia]
