Modify the usage example to properly use ~ in the path to the known_hosts file.

--- a/sshfp.1
+++ b/sshfp.1
@@ -78,7 +78,7 @@ sshfp \-k bofh.xelerance.com (from known_hosts)
 .LP
 sshfp \-s bofh.xelerance.com (from a scan to the host)
 .LP 
-sshfp \-k ~paul/.ssh/known_hosts bofh.xelerance.com www.openswan.org \-o /tmp/mysshfp.txt
+sshfp \-k ~/.ssh/known_hosts bofh.xelerance.com www.openswan.org \-o /tmp/mysshfp.txt
 .LP 
 sshfp \-a \-d \-d xelerance.com @ns0.xelerance.net >> /var/named/primary/xelerance.com
 .SH "SEE ALSO"
