--- a/sshfp.1
+++ b/sshfp.1
@@ -5,8 +5,8 @@ sshfp \- Generate SSHFP DNS records from knownhosts files or ssh-keyscan
 .SH "SYNTAX"
 .LP 
 .Comment: verify usage line
-.Comment:        print "usage: sshfp -k [-d] [ knownhosts_file ] [-o output] [ [-a] | host1 [host2 ... ] ]"
-.Comment:        print "       sshfp -s [-d] [ [-p port] [-a domainname] [-o output] | host1 [host2 .. ] ] [@ns]"
+.Comment:        print "usage: sshfp [-k knownhosts_file] [-d] [-o output] [ [-a] | host1 [host2 ... ] ]"
+.Comment:        print "       sshfp -s [-d] [ [-p port] [-a] [-n nameserver] [-o output] | host1 [host2 .. ] ]"
 sshfp [\fI\-k\fP [\fIknownhosts_file\fP]] [\fI\-d\fP] [\fI\-a\fP] | [<\fIhost1\fP> [\fIhost2 ...]\fP]
 .br 
 sshfp \fI\-s\fP [\fI\-p\fP <\fIport\fP>] [\fI\-d\fP] <\fI\-a\fP <\fIdomain\fP> [\fI@ns\fP] | <\fIhost1\fP> [\fIhost2 ...\fP] >
@@ -24,7 +24,7 @@ the hostname to be scanned. If the nameserver of the domain allows zone tranfers
 \fB\-s / \-\-scan\fR <\fIhostname1\fP> [hostname2 ...]
 Scan hosts or domain for public SSH keys using ssh\-keyscan 
 .TP 
-\fB\-k / \-\-knownhosts \fI[knownhosts_file\fP] <\fIhostname1\fP> [hostname2 ...]
+\fB\-k / \-\-knownhosts <\fIknownhosts_file\fP> <\fIhostname1\fP> [hostname2 ...]
 Obtain public SSH keys from a known_hosts file. Defaults to using ~/.ssh/known_hosts
 .TP 
 \fB\-a / \-\-all\fR
@@ -66,7 +66,7 @@ Debian: apt-get install python-dnspython
 .LP 
 if a domain contains non\-working glue A records, then ssh\-keyscan aborts instead of skipping the single broken entry.
 .LP 
-There is no facility to lookup hashed hostnames in known_hosts files
+This program can look up hashed hostnames in a known_hosts file if a recent-enough ssh-keygen is present
 .SH "EXAMPLES"
 typical usage:
 .LP 
@@ -80,7 +80,7 @@ sshfp \-s bofh.xelerance.com (from a scan to the host)
 .LP 
 sshfp \-k ~paul/.ssh/known_hosts bofh.xelerance.com www.openswan.org \-o /tmp/mysshfp.txt
 .LP 
-sshfp \-a \-d \-d xelerance.com @ns0.xelerance.net >> /var/named/primary/xelerance.com
+sshfp \-a \-d \-d xelerance.com -n ns0.xelerance.net >> /var/named/primary/xelerance.com
 .SH "SEE ALSO"
 .LP 
 ssh\-keyscan(1) ssh(1) and RFC\-4255
