--- a/sshfp.1
+++ b/sshfp.1
@@ -52,6 +52,9 @@ Output help information and exit.
 .TP 
 \fB\-v / \-\-version\fR
 Output version information and exit.
+.TP
+\fB\-q / \-\-quiet\fR
+Output less miscellany to stderr
 .SH "FILES"
 .LP 
 \fI~/.ssh/known_hosts\fP 
