--- a/sshfp.1
+++ b/sshfp.1
@@ -1,4 +1,4 @@
-.TH "sshfp" "1" "1.1.3" "Paul Wouters" "Internet / DNS"
+.TH "sshfp" "1" "1.1.4" "Paul Wouters" "Internet / DNS"
 .SH "NAME"
 .LP 
 sshfp \- Generate SSHFP DNS records from knownhosts files or ssh-keyscan
@@ -7,9 +7,9 @@ sshfp \- Generate SSHFP DNS records from knownhosts files or ssh-keyscan
 .Comment: verify usage line
 .Comment:        print "usage: sshfp [-k knownhosts_file] [-d] [-o output] [ [-a] | host1 [host2 ... ] ]"
 .Comment:        print "       sshfp -s [-d] [ [-p port] [-a] [-n nameserver] [-o output] | host1 [host2 .. ] ]"
-sshfp [\fI\-k\fP [\fIknownhosts_file\fP]] [\fI\-d\fP] [\fI\-a\fP] | [<\fIhost1\fP> [\fIhost2 ...]\fP]
+sshfp [\fI\-k\fP <\fIknownhosts_file\fP>] [\fI\-d\fP] [\fI\-a\fP] | [<\fIhost1\fP> [\fIhost2 ...]\fP]
 .br 
-sshfp \fI\-s\fP [\fI\-p\fP <\fIport\fP>] [\fI\-d\fP] <\fI\-a\fP <\fIdomain\fP> [\fI@ns\fP] | <\fIhost1\fP> [\fIhost2 ...\fP] >
+sshfp \fI\-s\fP [\fI\-p\fP <\fIport\fP>] [\fI\-d\fP] <\fI\-a\fP> [\fI-n <\fInameserver\fP>\fP] <\fIdomain1\fP> [\fIdomain2\fP] | <\fIhost1\fP> [\fIhost2 ...\fP] >
 .SH "DESCRIPTION"
 .LP 
 sshfp generates RFC4255 SSHFP DNS records based on the public keys
