--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+sshfp (1.1.4) unstable; urgency=low
+
+  * Support for newer versions of python
+  * Refactored
+  * Improved documentation
+
+ -- James Brown <jbrown@yelp.com>  Wed, 13 Oct 2010 11:14:29 -0700
+
 sshfp (1.1.3-1) unstable; urgency=low
 
   * Moved trailing-dot option from -t to -d
