add -v for version. regenerate sshfp.1 man page. updated version to 1.2.0

--- a/sshfp.1
+++ b/sshfp.1
@@ -2,12 +2,12 @@
 .\"     Title: sshfp
 .\"    Author: [see the "AUTHORS" section]
 .\" Generator: DocBook XSL Stylesheets v1.76.1 <http://docbook.sf.net/>
-.\"      Date: 1.1.6
+.\"      Date: April 12, 2011
 .\"    Manual: Internet / DNS
 .\"    Source: Paul Wouters
 .\"  Language: English
 .\"
-.TH "SSHFP" "1" "1\&.1\&.6" "Paul Wouters" "Internet / DNS"
+.TH "SSHFP" "1" "April 12, 2011" "Paul Wouters" "Internet / DNS"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
