--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Software	: sshfp
 URL		: http://www.xelerance.com/software/sshfp/
 Source		: ftp://ftp.xelerance.com/sshfp/
-License		: GPL
+License		: GPLv2+
 Mailinglist	: http://lists.xelerance.com/mailman/listinfo/sshfp/
 Authors		: Paul Wouters, Jacob Appelbaum
 Summary		: Generate RFC-4255 SSHFP DNS records from known_hosts files or ssh-keyscan
