--- a/dane.1
+++ b/dane.1
@@ -165,7 +165,7 @@ and RFC\-XXXX
 Paul Wouters <paul@xelerance\&.com>
 .SH "COPYRIGHT"
 .PP
-Copyright 2006\-2011 Xelerance Corporation
+Copyright 2011 Xelerance Corporation
 .PP
 This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version\&. See <\m[blue]\fBhttp://www\&.fsf\&.org/copyleft/gpl\&.txt\fR\m[]>\&.
 .PP
