--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+v1.2.2 (unreleased)
+- Fix -4 / -6 flags [Chris]
+- Throw errors on stderr to improve pipe usage [Ludwig Nusse]
+- openSUSE package information on import error [Ludwig Nusse]
+- Fix nameserver by IP address (ldns workaround [Chris]
+
 v1.2.1 (April 25th, 2011)
 - Fix copyright information to clearly make it is all GPLv2+ [Paul]
 
