--- a/README
+++ b/README
@@ -11,7 +11,13 @@ public keys from a known_hosts file or from scanning the host's sshd daemon.
 The ssh client can use these SSHFP records if you set "VerifyHostKeyDNS yes"
 in the file /etc/ssh/ssh_config or ~/.ssh/config. See RFC-4255
 
-REQUIREMENTS
+# Requirements
 
 sshfp requires python-dns: http://www.pythondns.org
 
+# QuickStart
+
+```
+virtualenv -p python2.7 ./
+bin/pip install dnspython
+```
